--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
 
 <h1>Backbone Tweets</h1>
 
-<ul id="tweets"></ul>
+<ul id='tweets-list'></ul>
 
 <script type='text/template' id='tweet-template'>
-  <li><%= text %></li>
+  <li id=<%= id %>><%= text %></li>
 </script>
 
 <script
