trigger call for tweets on page load

--- a/public/index.html
+++ b/public/index.html
@@ -21,3 +21,8 @@
 <script src="javascripts/underscore-min.js"></script>
 <script src="javascripts/backbone-min.js"></script>
 <script src="javascripts/application.js"></script>
+<script>
+  $(function() {
+    tweets.fetch();
+  });
+</script>
